--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GimGenius</title>
     <style>
-        /* Reset and Basic Styling */
         * {
             margin: 0;
             padding: 0;
@@ -14,8 +13,8 @@
         }
 
         body {
-            font-family: 'Helvetica Neue', sans-serif;
-            background-color: #e1ecff; /* Light Blue */
+            font-family: 'Poppins', sans-serif;
+            background-color: #e1ecff;
             color: #333;
             display: flex;
             justify-content: center;
@@ -23,37 +22,65 @@
             height: 100vh;
         }
 
-        /* Container and Main Layout */
         .container {
             width: 90%;
             max-width: 900px;
             background-color: #ffffff;
             border-radius: 16px;
             padding: 40px;
-            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
             text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .container:before {
+            content: '';
+            position: absolute;
+            top: -150px;
+            right: -150px;
+            width: 300px;
+            height: 300px;
+            background: radial-gradient(circle at center, rgba(255, 204, 0, 0.3), transparent);
+            z-index: 0;
+        }
+
+        .container:after {
+            content: '';
+            position: absolute;
+            bottom: -150px;
+            left: -150px;
+            width: 300px;
+            height: 300px;
+            background: radial-gradient(circle at center, rgba(148, 0, 211, 0.3), transparent);
+            z-index: 0;
         }
 
         h1 {
             font-size: 3em;
-            color: #004aad; /* Deep Blue */
+            color: #004aad;
             font-weight: 700;
             margin-bottom: 10px;
+            position: relative;
+            z-index: 1;
         }
 
         h1 span {
-            color: #ffcc00; /* Yellow Accent */
+            color: #ffcc00;
         }
 
         p {
             font-size: 1.2em;
-            color: #777;
+            color: #555;
             margin-bottom: 30px;
+            position: relative;
+            z-index: 1;
         }
 
-        /* Input and Button Styling */
         .input-container {
             margin-bottom: 30px;
+            position: relative;
+            z-index: 1;
         }
 
         .input-container input[type="text"] {
@@ -63,21 +90,21 @@
             border-radius: 8px;
             font-size: 1.1em;
             color: #004aad;
-            background-color: #f7fbff; /* Soft Background for Input */
+            background-color: #f7fbff;
             box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.05);
             transition: all 0.3s ease;
         }
 
         .input-container input[type="text"]:focus {
-            border-color: #9400d3; /* Purple */
+            border-color: #9400d3;
             outline: none;
-            box-shadow: 0 0 8px rgba(148, 0, 211, 0.5);
+            box-shadow: 0 0 12px rgba(148, 0, 211, 0.4);
         }
 
         .submit-button {
             width: 100%;
-            background-color: #ffcc00; /* Yellow Button */
-            color: #004aad; /* Text Color */
+            background-color: #ffcc00;
+            color: #004aad;
             border: none;
             padding: 15px;
             border-radius: 8px;
@@ -88,27 +115,28 @@
         }
 
         .submit-button:hover {
-            background-color: #ff8c00; /* Orange Hover */
+            background-color: #ff8c00;
         }
 
         .submit-button:active {
             transform: scale(0.98);
         }
 
-        /* How to Use and Guide Sections */
         .section {
             margin-top: 40px;
             padding: 25px;
-            background-color: #004aad; /* Deep Blue */
+            background-color: #004aad;
             border-radius: 12px;
             color: #ffffff;
             text-align: left;
+            position: relative;
+            z-index: 1;
         }
 
         .section h2 {
             font-size: 1.8em;
             margin-bottom: 15px;
-            color: #32CD32; /* Green Header */
+            color: #32CD32;
         }
 
         .section p {
@@ -116,14 +144,14 @@
             line-height: 1.6;
         }
 
-        /* Footer */
         footer {
             margin-top: 30px;
             font-size: 0.9em;
             color: #aaa;
+            position: relative;
+            z-index: 1;
         }
 
-        /* Modern Aesthetic Additions */
         .gradient-bg {
             background: linear-gradient(135deg, #32CD32 0%, #ff8c00 100%);
             -webkit-background-clip: text;
@@ -138,7 +166,6 @@
             from { opacity: 0; }
             to { opacity: 1; }
         }
-
     </style>
 </head>
 <body>
@@ -152,7 +179,6 @@
             <button class="submit-button" onclick="submitCode()">Submit Code</button>
         </div>
 
-        <!-- How to Use Section -->
         <div class="section">
             <h2>How to Use</h2>
             <p>1. Enter your GimKit game code in the box above.</p>
@@ -160,7 +186,6 @@
             <p>3. You will be redirected to the answers page for real-time results.</p>
         </div>
 
-        <!-- Guide Section -->
         <div class="section">
             <h2>Guide</h2>
             <p>This tool is built to provide you with the answers to active GimKit sessions. Use it wisely to gain an edge, but keep fairness in mind!</p>
