--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #e1ecff;
-            color: #333;
+            background-color: #1a1a2e;
+            color: #ffffff;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -24,11 +24,11 @@
 
         .container {
             width: 90%;
-            max-width: 900px;
-            background-color: #ffffff;
+            max-width: 800px;
+            background-color: #16213e;
             border-radius: 16px;
             padding: 40px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
             text-align: center;
             position: relative;
             overflow: hidden;
@@ -37,28 +37,28 @@
         .container:before {
             content: '';
             position: absolute;
-            top: -150px;
-            right: -150px;
-            width: 300px;
-            height: 300px;
-            background: radial-gradient(circle at center, rgba(255, 204, 0, 0.3), transparent);
+            top: -100px;
+            right: -100px;
+            width: 200px;
+            height: 200px;
+            background: radial-gradient(circle at center, rgba(255, 159, 64, 0.2), transparent);
             z-index: 0;
         }
 
         .container:after {
             content: '';
             position: absolute;
-            bottom: -150px;
-            left: -150px;
-            width: 300px;
-            height: 300px;
-            background: radial-gradient(circle at center, rgba(148, 0, 211, 0.3), transparent);
+            bottom: -100px;
+            left: -100px;
+            width: 200px;
+            height: 200px;
+            background: radial-gradient(circle at center, rgba(75, 192, 192, 0.2), transparent);
             z-index: 0;
         }
 
         h1 {
             font-size: 3em;
-            color: #004aad;
+            color: #f5a623;
             font-weight: 700;
             margin-bottom: 10px;
             position: relative;
@@ -66,12 +66,12 @@
         }
 
         h1 span {
-            color: #ffcc00;
+            color: #38ada9;
         }
 
         p {
             font-size: 1.2em;
-            color: #555;
+            color: #dddddd;
             margin-bottom: 30px;
             position: relative;
             z-index: 1;
@@ -86,25 +86,25 @@
         .input-container input[type="text"] {
             width: 100%;
             padding: 15px;
-            border: 2px solid transparent;
+            border: none;
             border-radius: 8px;
             font-size: 1.1em;
-            color: #004aad;
-            background-color: #f7fbff;
-            box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.05);
+            color: #ffffff;
+            background-color: #0f3460;
+            box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
             transition: all 0.3s ease;
         }
 
         .input-container input[type="text"]:focus {
-            border-color: #9400d3;
+            background-color: #16213e;
             outline: none;
-            box-shadow: 0 0 12px rgba(148, 0, 211, 0.4);
+            box-shadow: 0 0 12px rgba(255, 159, 64, 0.5);
         }
 
         .submit-button {
             width: 100%;
-            background-color: #ffcc00;
-            color: #004aad;
+            background-color: #f5a623;
+            color: #1a1a2e;
             border: none;
             padding: 15px;
             border-radius: 8px;
@@ -115,7 +115,7 @@
         }
 
         .submit-button:hover {
-            background-color: #ff8c00;
+            background-color: #ff5722;
         }
 
         .submit-button:active {
@@ -125,7 +125,7 @@
         .section {
             margin-top: 40px;
             padding: 25px;
-            background-color: #004aad;
+            background-color: #0f3460;
             border-radius: 12px;
             color: #ffffff;
             text-align: left;
@@ -136,7 +136,7 @@
         .section h2 {
             font-size: 1.8em;
             margin-bottom: 15px;
-            color: #32CD32;
+            color: #38ada9;
         }
 
         .section p {
@@ -147,13 +147,13 @@
         footer {
             margin-top: 30px;
             font-size: 0.9em;
-            color: #aaa;
+            color: #999999;
             position: relative;
             z-index: 1;
         }
 
         .gradient-bg {
-            background: linear-gradient(135deg, #32CD32 0%, #ff8c00 100%);
+            background: linear-gradient(135deg, #38ada9 0%, #f5a623 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
@@ -188,7 +188,7 @@
 
         <div class="section">
             <h2>Guide</h2>
-            <p>This tool is built to provide you with the answers to active GimKit sessions. Use it wisely to gain an edge</p>
+            <p>This tool is built to provide you with the answers to active GimKit sessions. Use it wisely to gain an edge, but keep fairness in mind!</p>
         </div>
 
         <footer>&copy; 2024 GimGenius | All Rights Reserved</footer>
