--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GimGenius</title>
     <style>
+        /* Style for enhanced visuals */
         * {
             margin: 0;
             padding: 0;
@@ -198,10 +199,14 @@
         function submitCode() {
             const code = document.getElementById('gimkitCode').value;
             if (code) {
+                // Construct the GimKit URL
+                const gimkitUrl = `https://www.gimkit.com/join?gc=${code}`;
+
                 // Simulate fetching data from GimKit API
-                fetchGimKitAnswers(code)
-                    .then(() => {
-                        // Redirect to the /answers page with the code
+                fetchGimKitAnswers(gimkitUrl)
+                    .then(answers => {
+                        // Redirect to the /answers page with the code and answers
+                        localStorage.setItem('gimkitAnswers', JSON.stringify(answers));
                         window.location.href = `/answers?code=${code}`;
                     })
                     .catch(() => {
@@ -212,17 +217,19 @@
             }
         }
 
-        // Simulated function to fetch data from GimKit API
-        function fetchGimKitAnswers(code) {
+        // Simulated function to fetch answers from the GimKit URL
+        function fetchGimKitAnswers(url) {
             // This function can later be expanded to fetch real data from a backend or API
             return new Promise((resolve, reject) => {
                 // Simulating an API request delay
                 setTimeout(() => {
-                    if (code) {
-                        resolve(); // Successfully fetch answers
-                    } else {
-                        reject();  // Fail to fetch answers
-                    }
+                    // Simulating response data (replace with actual API call)
+                    const answers = {
+                        question1: "Answer 1",
+                        question2: "Answer 2",
+                        question3: "Answer 3",
+                    };
+                    resolve(answers); // Successfully fetch answers
                 }, 1000);
             });
         }
