--- a/answers/index.html
+++ b/answers/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GimGenius Answers</title>
     <style>
-        /* Styles similar to the previous enhanced layout */
         body {
             font-family: 'Poppins', sans-serif;
             background-color: #1a1a2e;
@@ -16,44 +15,63 @@
             align-items: center;
             height: 100vh;
         }
-        /* Other styles unchanged */
+
+        .container {
+            width: 90%;
+            max-width: 800px;
+            background-color: #16213e;
+            border-radius: 16px;
+            padding: 40px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
+            text-align: center;
+        }
+
+        .section {
+            margin-top: 20px;
+            padding: 25px;
+            background-color: #0f3460;
+            border-radius: 12px;
+        }
+
+        footer {
+            margin-top: 30px;
+            font-size: 0.9em;
+            color: #999999;
+        }
     </style>
 </head>
 <body>
-    <div class="container fade-in">
+    <div class="container">
         <h1>GimKit Answers</h1>
-        <p id="loading">Fetching answers...</p>
+        <p id="loading">Fetching answers for your host session...</p>
         <div id="answersContainer" class="section"></div>
 
         <footer>&copy; 2024 GimGenius | All Rights Reserved</footer>
     </div>
 
     <script>
-        // Get the GimKit code from the URL
+        // Get the host ID from the URL
         const urlParams = new URLSearchParams(window.location.search);
-        const gimkitCode = urlParams.get('code');
+        const hostId = urlParams.get('hostId');
 
-        if (gimkitCode) {
-            // Fetch the answers from the GimKit API
-            fetchGimKitData(gimkitCode)
+        if (hostId) {
+            fetchAnswers(hostId)
                 .then(answers => displayAnswers(answers))
                 .catch(err => document.getElementById('loading').textContent = 'Failed to retrieve answers.');
         } else {
-            document.getElementById('loading').textContent = 'No code provided.';
+            document.getElementById('loading').textContent = 'No valid host ID provided.';
         }
 
-        // Function to simulate fetching data from GimKit
-        async function fetchGimKitData(code) {
-            const response = await fetch(`https://www.gimkit.com/join?gc=${code}`);
+        async function fetchAnswers(hostId) {
+            const response = await fetch(`https://www.gimkit.com/host?id=${hostId}`);
             if (response.ok) {
-                const data = await response.json(); // Assuming it returns JSON with answers
-                return data.answers; // Extract answers from the returned data
+                const data = await response.json();
+                return data.answers;
             } else {
                 throw new Error('Failed to fetch data');
             }
         }
 
-        // Function to display answers
         function displayAnswers(answers) {
             const answersContainer = document.getElementById('answersContainer');
             document.getElementById('loading').style.display = 'none';
@@ -65,7 +83,7 @@
                     answersContainer.appendChild(answerElem);
                 });
             } else {
-                answersContainer.textContent = 'No answers available for this GimKit code.';
+                answersContainer.textContent = 'No answers available for this GimKit session.';
             }
         }
     </script>
