--- a/index.html
+++ b/index.html
@@ -3,171 +3,207 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GimGenius</title>
+    <title>GIM Genius: Hacks, Mods, & Dev Tools</title>
     <style>
-        /* Enhanced styles for a more modern look */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #1a1a2e;
-            color: #ffffff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            width: 90%;
-            max-width: 800px;
-            background-color: #16213e;
-            border-radius: 16px;
-            padding: 40px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-        }
-
-        h1 {
-            font-size: 3em;
-            color: #f5a623;
-            font-weight: 700;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 1.2em;
-            color: #dddddd;
-            margin-bottom: 30px;
-        }
-
-        .input-container {
-            margin-bottom: 30px;
-        }
-
-        .input-container input {
-            width: 100%;
-            padding: 15px;
-            border: none;
-            border-radius: 8px;
-            font-size: 1.1em;
-            color: #ffffff;
-            background-color: #0f3460;
-            box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
-            transition: all 0.3s ease;
-        }
-
-        .input-container input:focus {
-            background-color: #16213e;
-            outline: none;
-            box-shadow: 0 0 12px rgba(255, 159, 64, 0.5);
-        }
-
-        .submit-button {
-            width: 100%;
-            background-color: #f5a623;
-            color: #1a1a2e;
-            border: none;
-            padding: 15px;
-            border-radius: 8px;
-            font-size: 1.2em;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.1s ease;
-        }
-
-        .submit-button:hover {
-            background-color: #ff5722;
-        }
-
-        .submit-button:active {
-            transform: scale(0.98);
-        }
-
-        .section {
-            margin-top: 40px;
-            padding: 25px;
-            background-color: #0f3460;
-            border-radius: 12px;
-            color: #ffffff;
-            text-align: left;
-        }
-
-        .section h2 {
-            font-size: 1.8em;
-            margin-bottom: 15px;
-            color: #38ada9;
-        }
-
-        .section p {
-            font-size: 1.1em;
+            font-family: Arial, sans-serif;
+            background-color: #111;
+            color: #fff;
             line-height: 1.6;
         }
 
-        footer {
-            margin-top: 30px;
-            font-size: 0.9em;
-            color: #999999;
+        header {
+            background: #333;
+            padding: 20px;
+            text-align: center;
         }
 
-        .error {
-            color: #ff5722;
+        header h1 {
+            color: #f39c12;
+            font-size: 3em;
             font-weight: bold;
-            margin-top: 10px;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+        }
+
+        nav ul li {
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1.2em;
+            transition: color 0.3s;
+        }
+
+        nav ul li a:hover {
+            color: #f39c12;
+        }
+
+        .hero {
+            background: url('https://source.unsplash.com/1600x600/?gaming') no-repeat center center/cover;
+            height: 60vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        .hero h2 {
+            font-size: 2.5em;
+            text-shadow: 2px 2px 5px #000;
+        }
+
+        .section {
+            padding: 50px 20px;
+            text-align: center;
+        }
+
+        .section h2 {
+            font-size: 2.2em;
+            margin-bottom: 30px;
+        }
+
+        .section p {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+            color: #ddd;
+        }
+
+        .cards {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+
+        .card {
+            background-color: #222;
+            width: 300px;
+            padding: 20px;
+            margin: 10px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            transition: transform 0.3s;
+        }
+
+        .card:hover {
+            transform: translateY(-10px);
+        }
+
+        .card h3 {
+            color: #f39c12;
+            margin-bottom: 15px;
+        }
+
+        .search-bar {
+            margin-top: 30px;
+            display: flex;
+            justify-content: center;
+        }
+
+        .search-bar input {
+            padding: 10px;
+            width: 300px;
+            border-radius: 8px;
+            border: 2px solid #f39c12;
+            font-size: 1em;
+        }
+
+        footer {
+            background-color: #333;
+            color: #bbb;
+            text-align: center;
+            padding: 20px;
+            margin-top: 50px;
+        }
+
+        footer a {
+            color: #f39c12;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div class="container fade-in">
-        <h1>GimGenius</h1>
-        <p>Copy the host ID from the GimKit session</p>
 
-        <div class="input-container">
-            <input type="text" id="gimkitHostURL" placeholder="Paste the GimKit host URL here">
-            <span class="error" id="errorMsg"></span>
-            <br><br>
-            <button class="submit-button" onclick="submitHostURL()">Submit Host URL</button>
+    <!-- Header -->
+    <header>
+        <h1>GIM Genius</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Hacks</a></li>
+                <li><a href="#">Mods</a></li>
+                <li><a href="#">Dev Tools</a></li>
+                <li><a href="#">Community</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <h2>Unlock Your Gaming Potential with Hacks & Dev Tools</h2>
+    </section>
+
+    <!-- Hacks and Mods Section -->
+    <section class="section">
+        <h2>Explore the Latest Game Hacks & Mods</h2>
+        <p>Find the best hacks, cheats, and mods to take your gaming experience to the next level!</p>
+        <div class="cards">
+            <div class="card">
+                <h3>Latest Game Hacks</h3>
+                <p>Download cheats and hacks for the most popular games, updated regularly.</p>
+            </div>
+            <div class="card">
+                <h3>Top Game Mods</h3>
+                <p>Customize your favorite games with mods created by our community of developers.</p>
+            </div>
         </div>
+    </section>
 
-        <div class="section">
-            <h2>Instructions</h2>
-            <p>1. Go to your active GimKit session as a host.</p>
-            <p>2. Copy the URL that looks like this: <code>https://www.gimkit.com/host?id=YOUR_CODE</code>.</p>
-            <p>3. Paste it into the input field above and hit "Submit Host URL."</p>
-            <p>4. You will be redirected to the answers page for real-time results.</p>
+    <!-- Dev Tools Section -->
+    <section class="section">
+        <h2>Game Development Tools & Resources</h2>
+        <p>Get the tools and resources you need to build or mod your own games.</p>
+        <div class="cards">
+            <div class="card">
+                <h3>Modding Tutorials</h3>
+                <p>Step-by-step guides to help you create your own game mods.</p>
+            </div>
+            <div class="card">
+                <h3>Dev Tools & Scripts</h3>
+                <p>Download development tools and scripts to streamline your game development process.</p>
+            </div>
         </div>
+    </section>
 
-        <footer>&copy; 2024 GimGenius | All Rights Reserved</footer>
+    <!-- Search Bar -->
+    <div class="search-bar">
+        <input type="text" placeholder="Search for hacks, mods, or tools...">
     </div>
 
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 GIM Genius. All Rights Reserved.</p>
+        <p><a href="#">Terms of Service</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact Us</a></p>
+    </footer>
+
     <script>
-        function submitHostURL() {
-            const hostURL = document.getElementById('gimkitHostURL').value;
-            const errorMsg = document.getElementById('errorMsg');
-            errorMsg.innerText = ''; // Clear previous errors
-
-            const hostID = getHostIDFromURL(hostURL);
-
-            if (hostID) {
-                // Redirect to the /answers page with the host ID
-                window.location.href = `/answers?hostId=${hostID}`;
-            } else {
-                errorMsg.innerText = 'Please provide a valid GimKit host URL.';
-            }
-        }
-
-        function getHostIDFromURL(url) {
-            // Check if the URL is a valid GimKit host URL
-            const pattern = /^https:\/\/www\.gimkit\.com\/host\?id=([a-zA-Z0-9]+)$/;
-            const match = url.match(pattern);
-
-            if (match && match[1]) {
-                return match[1]; // Return the extracted host ID
-            }
-
-            return null; // Invalid URL
-        }
+        // Placeholder JS (You can add functionality as needed)
+        console.log("Welcome to GIM Genius!");
     </script>
 </body>
 </html>
