--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIM Genius: Hacks, Mods, & Dev Tools</title>
+    <title>GIM Genius: Cheats, Mods, & Dev Tools</title>
     <style>
         /* General Styling */
         * {
@@ -14,19 +14,18 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #0e0e0e;
+            background-color: #0f0f0f;
             color: #f5f5f5;
             line-height: 1.6;
         }
 
-        /* Smooth transitions */
-        a, button, input {
-            transition: all 0.3s ease-in-out;
+        a {
+            transition: all 0.3s ease;
         }
 
         /* Header */
         header {
-            background: linear-gradient(135deg, #1f1c18, #2e2a2b);
+            background: linear-gradient(135deg, #1a1a1a, #2e2e2e);
             padding: 20px 0;
             text-align: center;
         }
@@ -34,8 +33,9 @@
         header h1 {
             font-size: 3.5em;
             color: #f39c12;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             letter-spacing: 1px;
+            text-transform: uppercase;
         }
 
         nav ul {
@@ -46,21 +46,21 @@
         }
 
         nav ul li {
-            margin: 0 15px;
+            margin: 0 20px;
         }
 
         nav ul li a {
             color: #f5f5f5;
-            font-size: 1.2em;
+            font-size: 1.1em;
             text-decoration: none;
-            padding: 5px 15px;
+            padding: 8px 20px;
             border-radius: 25px;
             font-weight: 500;
         }
 
         nav ul li a:hover {
             background-color: #f39c12;
-            color: #0e0e0e;
+            color: #0f0f0f;
         }
 
         /* Hero Section */
@@ -84,11 +84,11 @@
         }
 
         .hero h2 {
-            font-size: 3em;
+            font-size: 3.5em;
             color: #f5f5f5;
-            text-align: center;
             z-index: 1;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+            text-align: center;
         }
 
         /* Section Styling */
@@ -120,12 +120,13 @@
         }
 
         .card {
-            background-color: #1f1c18;
+            background-color: #1f1f1f;
             width: 350px;
             padding: 30px;
             border-radius: 15px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
             transition: transform 0.3s ease;
+            margin-bottom: 20px;
         }
 
         .card:hover {
@@ -165,7 +166,7 @@
 
         /* Footer */
         footer {
-            background-color: #1f1c18;
+            background-color: #1f1f1f;
             color: #bbb;
             text-align: center;
             padding: 30px 20px;
@@ -186,7 +187,7 @@
             text-decoration: underline;
         }
 
-        /* Responsive Styling */
+        /* Responsive Design */
         @media (max-width: 768px) {
             .cards {
                 flex-direction: column;
@@ -214,7 +215,7 @@
         <h1>GIM Genius</h1>
         <nav>
             <ul>
-                <li><a href="#">Hacks</a></li>
+                <li><a href="#">Cheats</a></li>
                 <li><a href="#">Mods</a></li>
                 <li><a href="#">Dev Tools</a></li>
                 <li><a href="#">Community</a></li>
@@ -224,20 +225,20 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h2>Unlock Your Gaming Potential with Hacks & Dev Tools</h2>
+        <h2>Unlock Your Gaming Potential with Cheats, Mods & Dev Tools</h2>
     </section>
 
-    <!-- Hacks and Mods Section -->
+    <!-- Cheats and Mods Section -->
     <section class="section">
-        <h2>Explore the Latest Game Hacks & Mods</h2>
-        <p>Find the most powerful hacks, cheats, and mods to level up your gaming experience!</p>
+        <h2>Explore the Latest Cheats & Mods</h2>
+        <p>Find powerful cheats, cheats, and mods to elevate your gaming experience to the next level!</p>
         <div class="cards">
             <div class="card">
-                <h3>Latest Game Hacks</h3>
-                <p>Download the newest cheats and hacks for the most popular games, updated frequently.</p>
+                <h3>Latest Cheats</h3>
+                <p>Download the newest cheats for the most popular games, updated frequently.</p>
             </div>
             <div class="card">
-                <h3>Top Game Mods</h3>
+                <h3>Top Mods</h3>
                 <p>Transform your favorite games with the most downloaded mods created by the community.</p>
             </div>
         </div>
@@ -261,7 +262,7 @@
 
     <!-- Search Bar -->
     <div class="search-bar">
-        <input type="text" placeholder="Search for hacks, mods, or dev tools...">
+        <input type="text" placeholder="Search for cheats, mods, or dev tools...">
     </div>
 
     <!-- Footer -->
@@ -271,7 +272,7 @@
     </footer>
 
     <script>
-        console.log("Welcome to the new and modern GIM Genius!");
+        console.log("Welcome to GIM Genius! Enjoy exploring cheats, mods, and dev tools!");
     </script>
 </body>
 </html>
