--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,16 +11,17 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
         }
 
         body {
-            font-family: 'Poppins', sans-serif;
             background-color: #0f0f0f;
             color: #f5f5f5;
             line-height: 1.6;
         }
 
         a {
+            text-decoration: none;
             transition: all 0.3s ease;
         }
 
@@ -52,7 +54,6 @@
         nav ul li a {
             color: #f5f5f5;
             font-size: 1.1em;
-            text-decoration: none;
             padding: 8px 20px;
             border-radius: 25px;
             font-weight: 500;
@@ -71,6 +72,7 @@
             justify-content: center;
             align-items: center;
             position: relative;
+            border-bottom: 2px solid #f39c12;
         }
 
         .hero::before {
@@ -89,6 +91,7 @@
             z-index: 1;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
             text-align: center;
+            margin: 0;
         }
 
         /* Section Styling */
@@ -208,6 +211,7 @@
         }
     </style>
 </head>
+
 <body>
 
     <!-- Header -->
@@ -275,4 +279,5 @@
         console.log("Welcome to GIM Genius! Enjoy exploring cheats, mods, and dev tools!");
     </script>
 </body>
+
 </html>
