--- a/index.html
+++ b/index.html
@@ -184,10 +184,15 @@
         footer a {
             color: #f39c12;
             text-decoration: none;
+            padding: 10px 20px;
+            border-radius: 25px;
+            background-color: #333;
+            margin: 0 10px;
         }
 
         footer a:hover {
-            text-decoration: underline;
+            background-color: #f39c12;
+            color: #0f0f0f;
         }
 
         /* Responsive Design */
@@ -272,7 +277,11 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 GIM Genius. All Rights Reserved.</p>
-        <p><a href="#">Terms of Service</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact Us</a></p>
+        <p>
+            <a href="/tos">Terms of Service</a>
+            <a href="/privacy">Privacy Policy</a>
+            <a href="/contactus">Contact Us</a>
+        </p>
     </footer>
 
     <script>
