--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             padding: 20px;
         }
 
-        /* Title */
+        /* Title Styling */
         h1 {
             font-size: 3rem;
             color: #ff9800;
             margin-bottom: 20px;
         }
 
-        /* Container */
+        /* Container Styling */
         .container {
             width: 100%;
             max-width: 1200px;
@@ -46,7 +46,7 @@
             margin-top: 20px;
         }
 
-        /* Model Selector */
+        /* Model Selector Styling */
         .model-selector, .input-field {
             width: 100%;
             max-width: 600px;
@@ -69,7 +69,7 @@
             outline: none;
         }
 
-        /* Buttons */
+        /* Button Styling */
         button {
             background-color: #ff9800;
             padding: 15px 30px;
@@ -87,7 +87,7 @@
             background-color: #ff3d00;
         }
 
-        /* Output Section */
+        /* Output Section Styling */
         .output-section {
             width: 100%;
             max-width: 800px;
@@ -117,7 +117,7 @@
             border-radius: 10px;
         }
 
-        /* Footer */
+        /* Footer Styling */
         footer {
             margin-top: 50px;
             color: #aaaaaa;
@@ -125,16 +125,7 @@
             text-align: center;
         }
 
-        footer a {
-            color: #ff9800;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        /* Mobile Responsiveness */
+        /* Responsive Design */
         @media (max-width: 768px) {
             .container {
                 padding: 15px;
@@ -186,8 +177,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Nex Network AI. All Rights Reserved.</p>
-        <p><a href="/tos">Terms of Service</a> | <a href="/privacy">Privacy Policy</a> | <a href="/contactus">Contact Us</a></p>
+        <p>&copy; 2024 Nex Network AI</p>
     </footer>
 
     <script>
